# lvgl9.2

./: .gitignore  CMakeLists.txt  CMakePresets.json  Toolchain-arm.cmake  lv_conf.h
.github/: copilot-instructions.md
assets/: README.md
assets/fonts/: LXGWWenKaiMono_Light_14.c  LXGWWenKaiMono_Light_18.c  MapleMono_NF_CN_SemiBold_38.c  MapleMono_NF_CN_SemiBold_64.c  PingFangSC_Regular_14.c  PingFangSC_Regular_18.c  Roboto_Bold_150.c  Roboto_Bold_180.c  Roboto_Bold_260.c  Roboto_Bold_320.c
config/: app_config.h  lv_conf.h
docs/: font_generation_and_usage.md  project_structure.md
include/: demo_module.h  fonts.h  hello.h
include/app/: alarm.h  audio_player.h  data_service.h  network.h  ui_alarm.h  ui_video.h  video_player.h
include/app/ui/: ui_gallery.h  ui_music.h  ui_secondary.h  ui_time_widget.h  ui_weather_widget.h
scripts/: alarm_cli.sh  clean.sh  deploy.sh  fb_capture.sh  play_alarm.sh
src/: main.c
src/app/: CMakeLists.txt  alarm.c  alarm_example.c  audio_player.c  data_service.c  demo_module.c  hello.c  network.c  video_player.c
src/app/ui/: ui_alarm.c  ui_gallery.c  ui_main.c  ui_music.c  ui_secondary.c  ui_time_widget.c  ui_video.c  ui_video.h  ui_weather_widget.c
